# routes/api.php
@@ -19,7 +19,8 @@ Route::middleware(['api', 'logging'])->group(function () {
          * @group Comptes
          */
     Route::prefix('v1/' . config('api.name'))->group(function () {
-           Route::get('comptes', [CompteController::class, 'index'])->name('comptes.index');
-           Route::post('comptes', [CompteController::class, 'store'])->middleware('admin')->name('comptes.store');
-       });
+            Route::get('comptes', [CompteController::class, 'index'])->name('comptes.index');
+            Route::get('comptes/{compteId}', [CompteController::class, 'show'])->name('comptes.show');
+            Route::post('comptes', [CompteController::class, 'store'])->middleware('admin')->name('comptes.store');
+        });
 });
